--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,26 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Andada+Pro:ital,wght@0,400;0,800;1,600&display=swap');
 
 #container {
-    background-image: url(img/uploadswallpaper.b75843cd.jpg);
+    background-repeat: repeat;
+background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),
+ url("/dist/img/uploadswallpaper.b75843cd.jpg");
+    
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 60%;
+    }
     nav {
-        width: 20%;
+        width: 30%;
         margin-bottom: 5px;
         ul {
+            width: 100%;
             display: flex;
             justify-content: space-around;
-            #menu {
-                text-align: center;
-            }
+            
             li {
                 list-style: none;
                 font-family: 'Ephesis', cursive;
                 font-size: 30px;
                 text-decoration: underline;
+                cursor: pointer;
             }
         }
     }
@@ -32,15 +43,91 @@
     .card {
         width: 450px;
         height: 250px;
-        border: 1px solid black;
+        background-color: white;
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-family: 'Libre Baskerville', serif;
         border-radius: 5px;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        div {
+            display: none;
+            transition: 0.3s ease;
+            animation:emerge 1s linear ;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(255, 255, 255, 0.6);
+            font-size: 20px;
+            height: 100%;
+            width: 100%;
+            h2,p{
+                width: 60%;
+                text-align: center;
+                font-size: 25px;
+                font-family: 'Andada Pro', serif;
+
+            }
+            h2{
+                font-size: 800;
+                width: 100%;
+            }
+            p {
+                font-size: 400;
+                font-size: 20px;
+            }
+        }
+
         h2 {
             border-radius: 5px;
             font-size: 23px;
+            width: 90%;
+            height: 40px;
         }
+    }
+   .card:hover{
+       div{
+           display: flex;
+       }
+   }
+    #index1{
+        background-image: url("/dist/img/303183_154959034594290_1000590852_n.jpg");
+    }
+    #index2{
+        background-image: url("/dist/img/578398_400991823324342_579057430_n.jpg");
+        background-position: center;
+    }
+    #index3{
+        background-image: url("/dist/img/13533265_1300190303341990_6289235736896763950_n.jpg");
+    }
+    #index4 {
+        background-image: url(/dist/img/cheesecake5.jpg);
+    }
+    #index5{
+        background-image: url(/dist/img/DSC07813.JPG);
+    }
+    #index6{
+        background-image: url(/dist/img/IMG_20150802_131515.jpg);
+    }
+    #index7{
+        background-image: url(/dist/img/IMG_20210205_200048274.jpg);
+        background-position: center;
+    }
+    #index8{
+        background-image: url("/dist/img/pizzeta (1).jpg");
+    }
+    #index9{
+        background-image: url(/dist/img/tostado.jpg);
+    }
+}
+
+@keyframes emerge {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
