--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Andada+Pro:ital,wght@0,400;0,800;1,600&display=swap');
 
-#contact{
+#contactContainer{
     header{
         display: flex;
         flex-direction: column;
@@ -25,31 +26,87 @@
         }
     }
     #container_contact{
+        font-family: 'Andada Pro', serif;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
+        height: 75vh;
         #contact_us {
             width: 30%;
+            height: 60vh;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: flex-start;
             p {
                 text-align: center;
+                width: 90%;
+                align-self: center;
             }
             form {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
+                display: grid;
+                grid-template-columns: repeat(2,1fr);
+                margin-top: 10px;
+                input {
+                    border: 1px solid black;
+                    border-radius: 5px;
+                    height: 25px;
+                }
+                button{
+                    margin-top: 4px;
+                    background-color: white;
+                    border: 1px solid black;
+                    font-size: 16px;
+                    border-radius: 2px;
+                    width: 14.5625rem;
+                }
+               
             }
             h2 {
                 align-self: center;
+                margin-bottom: 5px;
+                text-decoration: underline;
             }
-            
+            .data {
+                height: 60px;
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                width: 80%;
+            }
+            .consulta {
+                display: flex;
+            }
+            #social_media {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                p {
+                    margin-bottom: 10px;
+                    width: 50%;
+                }
+                svg {
+                    transition: 0.3s ease ;
+                    margin-left: 6px;
+                }
+                svg:hover {
+                    transform: scale(1.1);
+                }
+            }
         }
-        #google_map{
-            width: 40%;
-            height: 20%;
+        
+    }
+    #google_map{
+        width: 40%;
+        height: 65vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        h2 {
+            text-decoration: underline;
         }
     }
 }
